test/files/neg/t7756b.scala
object Test {
  0 match {
    case _ => 0 == ""
  }
}
