test/files/neg/t7756b.check
t7756b.scala:3: warning: comparing values of types Int and String using `==' will always yield false
    case _ => 0 == ""
                ^
t7756b.scala:3: warning: Int and String are unrelated: they will most likely never compare equal
    case _ => 0 == ""
                ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
